# udpipe

doc/t2t_docsys/: txt2tags.py
releases/pypi/: .gitignore  gen.sh
src/: .gitignore  CMakeLists.txt  Makefile.builtem  Makefile.include
src/mi/: MorphTag.cpp  MorphTag.h  guesser.cpp  guesser.h  nodejs.cpp  nodejs.h  static.cpp  static.h
src/morphodita/derivator/: derivator_dictionary_encoder.cpp
src/morphodita/morpho/: generic_morpho.cpp  generic_morpho.h  morpho.h
src/rest_server/: udpipe_server.cpp  udpipe_service.cpp  udpipe_service.h
